--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,49 @@
+@import url("reset.css");
+
 body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+
+  /* Typography */
   font-size: 18px;
   line-height: 34px;
   color: #777;
+
+  /* Visual */
   background: url("../images/concrete_seamless.png");
 }
 
 * {
+  /* Box-model */
   box-sizing: border-box;
+
+  /* Positioning */
+  margin: 0;
+}
+
+html,
+body {
+  height: 100%;
 }
 
 /* general */
 
+.wrapper {
+  height: auto !important;
+  height: 100%;
+
+  /* Box-model */
+  min-height: 100%;
+
+  /* Positioning */
+  margin: 0 auto -100px;
+}
+
 .container {
+  /* Box-model */
   width: 100%;
   max-width: 960px;
+
+  /* Positioning */
   margin: 0 auto;
   clear: both;
 }
@@ -33,15 +62,21 @@ p:last-child {
 h1,
 h2,
 h3 {
+  /* Typography */
   font-family: Georgia, Times, "Times New Roman", serif;
   font-weight: 700;
   color: #4aaaa5;
 }
 
 h1 {
+  /* Box-model */
   padding-bottom: 20px;
+
+  /* Typography */
   font-size: 30px;
   line-height: 49px;
+
+  /* Visual */
   border-bottom: 3px solid #ddd;
 }
 
@@ -55,18 +90,30 @@ h3 {
 #masthead {
   position: fixed;
   z-index: 99;
+
+  /* Box-model */
   width: 100%;
+
+  /* Positioning */
   margin: 0 0 30px;
   overflow: auto;
+
+  /* Typography */
   color: #fff;
   background: #fff;
+
+  /* Visual */
   border-bottom: 2px solid #ccc;
 }
 
 #logo {
   float: left;
+
+  /* Box-model */
   width: 250px;
   height: 90px;
+
+  /* Typography */
   font-family: Georgia, Times, "Times New Roman", serif;
   font-size: 30px;
   font-weight: 700;
@@ -74,71 +121,162 @@ h3 {
   color: #fff;
   text-align: center;
   text-decoration: none;
+
+  /* Visual */
   background: #4aaaa5;
 }
 
 nav {
+  /* Box-model */
   float: right;
+
+  /* Positioning */
   margin-top: 25px;
 }
 
-nav a {
+nav li {
   display: inline-block;
+
+  /* Box-model */
   padding-left: 15px;
+
+  /* Positioning */
   margin-left: 15px;
+
+  /* Typography */
   line-height: 18px;
-  color: #999;
-  text-decoration: none;
+
+  /* Visual */
   border-left: 1px solid #efefef;
 }
 
-nav a:first-child {
+nav a {
+  /* Typography */
+  color: #999;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: #666;
+}
+
+nav li:first-child {
+  /* Box-model */
+  padding-left: 0;
+
+  /* Positioning */
+  margin-left: 0;
+
+  /* Visual */
   border-left: 0 none;
 }
 
 /* footer */
 
-footer {
-  padding: 30px 0;
-  clear: both;
-  font-size: 12px;
-  color: #fff;
-  color: #ccc;
-  text-align: center;
-  background: #666;
-  border-top: 8px solid #4aaaa5;
-  height: 50px;
+footer,
+.push {
+  height: 100px;
 }
 
-h3, h2 {
+footer {
+  /* Box-model */
+  padding: 30px 0;
+
+  /* Positioning */
+  clear: both;
+  font-size: 12px;
+
+  /* Typography */
+  color: #ccc;
+  text-align: center;
+
+  /* Visual */
+  background: #666;
+  border-top: 8px solid #4aaaa5;
+}
+
+/* sidebar */
+
+.sidebar {
+  float: right;
+  width: 100%;
+  max-width: 270px;
+
+  /* Box-model */
+  padding: 30px;
+
+  /* Positioning */
+  margin-bottom: 20px;
+  background: #fff;
+
+  /* Visual */
+  border: 1px solid #ddd;
+}
+
+h3,
+.sidebar h2 {
+  /* Box-model */
   padding-bottom: 20px;
+
+  /* Positioning */
   margin-bottom: 15px;
+
+  /* Typography */
   line-height: 22px;
+
+  /* Visual */
   border-bottom: 2px solid #eee;
+}
+
+.sidebar li {
+  /* Box-model */
+  float: left;
+  width: 62px;
+  height: 62px;
+
+  /* Positioning */
+  margin-top: 8px;
+  margin-right: 10px;
+}
+
+.sidebar img {
+  max-width: 100%;
+}
+
+.sidebar li:last-child {
+  margin-right: 0;
 }
 
 /* main */
 
-#main-container {
+main {
   padding-top: 130px;
-  min-height: calc(100vh - 70px);
 }
 
 .main-section {
   float: left;
   width: 100%;
-  max-width: 960px;
+  max-width: 650px;
+
+  /* Box-model */
   padding: 30px;
+
+  /* Positioning */
   margin: 0 0 40px;
   background: #fff;
+
+  /* Visual */
   border: 1px solid #ddd;
 }
 
 /* portfolio page */
 
 .work {
+  /* Positioning */
   position: relative;
   float: left;
+
+  /* Box-model */
   width: 274px;
   margin: 20px 0 25px;
   overflow: auto;
@@ -149,30 +287,47 @@ h3, h2 {
 }
 
 .work img {
+  /* Box-model */
   width: 100%;
+
+  /* Visual */
   border: 0 none;
+
+  /* Misc */
   opacity: 0.8;
 }
 
 .work h3 {
+  /* Positioning */
   position: absolute;
   bottom: 20px;
   width: 100%;
+
+  /* Box-model */
   padding: 15px;
   margin-bottom: 0;
   font-weight: 300;
   line-height: 30px;
+
+  /* Typography */
+
   color: #fff;
   text-align: center;
   background: #4aaaa5;
+
+  /* Visual */
   border-bottom: 0;
 }
 
 .auth-image {
   float: left;
+
+  /* Box-model */
   width: 200px;
   height: auto;
   margin-top: 10px;
+
+  /* Positioning */
   margin-right: 25px;
 }
 
@@ -190,6 +345,7 @@ label,
 input[type=text],
 input[type=email],
 textarea {
+  /* Box-model */
   display: block;
   width: 100%;
 }
@@ -197,9 +353,14 @@ textarea {
 input[type=text],
 input[type=email],
 textarea {
+  /* Box-model */
   height: 35px;
   padding: 0 10px;
+
+  /* Typography */
   font-size: 14px;
+
+  /* Visual */
   border: 1px solid #ddd;
 }
 
@@ -208,10 +369,86 @@ textarea {
 }
 
 input[type=submit] {
+  /* Box-model */
   padding: 10px 30px;
   font-size: 18px;
+
+  /* Typography */
   color: #fff;
+
+  /* Misc */
   cursor: pointer;
   background: #4aaaa5;
+
+  /* Visual */
   border: 0 none;
+}
+
+/* added media queries for screen sizes of 980px, 768px, and 640px */
+@media only screen and (max-width: 980px) {
+
+  /* modify all container elements in all 3 html files */
+  .container {
+
+    padding: 0 20px 0 20px;
+    max-width: 768px; /* set container width to 768px in all 3 html files when screen size is 980px or smaller */
+    
+  }
+
+  main.container {
+    padding-top: 130px; /* space above content in main container */
+  }
+
+  .main-section {
+    max-width: 420px;  /* set max-width less than main container for all 3 html specific content (not for navbar, sidebar, footer) */
+  }
+
+  .auth-image {
+    width: 100%;
+    margin-bottom: 20px;  /* set margin below main image on index.html and100% width */
+  }
+
+  .work {
+    width: 100%;  /* set width to 100% for each job/image in portfolio.html */
+  }
+
+}
+
+@media only screen and (max-width: 768px) {
+  
+  .main-section {max-width: 100%;} /*set max-width to 100% all 3 html specific content (not for navbar and footer) */
+
+  .auth-image {width: 50%;} /* set width of main image in index.html to 50% */
+
+  .sidebar {
+    margin-bottom: 40px; /*set margin under sidebar to 40px */
+    max-width: 100%; /*set sidebar to 100% */
+  } 
+
+  .work {
+    width: 45%; /* set width between portfolio images */
+    margin-bottom: 5px; /* set margins below portfolio images */
+  }
+
+
+}
+
+@media only screen and (max-width: 640px) {
+  #masthead {
+    position: static;  /* set navbar position in all 3 html files to static */
+    margin-bottom: 30px; /*set margin below navbar in all 3 html files to 20px */
+  }
+
+  main.container {padding-top:0;} /* set space between navbar and content of each html page */
+
+  nav {
+    width: 100%; /* set width of navbar links to 100% */
+    margin: 15px 0px 15px 0px; /* set margins around links in navbar */
+    text-align: center;  /* align navbar links in center of page */
+  }
+
+  #logo, .auth-image, .work{width: 100%;} /* set width in navbar name, main photo, and portfoilo images */
+ 
+  
+
 }
